Detail pages for staff

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1865,6 +1865,19 @@ ul.breadcrumbs {
     }
 }
 
+.scvo-staff.list {
+    margin-bottom: $spacing-unit/2;
+}
+.post-info .post-info-author img,
+.scvo-staff-photo-wee {
+    width: 1.6rem !important;
+    height: 1.6rem !important;
+    border-radius: 50%;
+    margin-right: $spacing-unit/2;
+    vertical-align: text-bottom;
+    float: left;
+    margin-top: -0.15rem;
+}
 .post-info {
     font-size: 0.9rem;
     color: #333;
@@ -1882,15 +1895,6 @@ ul.breadcrumbs {
         }
         a:hover .underline {
             text-decoration: underline;
-        }
-        img {
-            width: 1.6rem !important;
-            height: 1.6rem !important;
-            border-radius: 50%;
-            margin-right: $spacing-unit/2;
-            vertical-align: text-bottom;
-            float: left;
-            margin-top: -0.15rem;
         }
     }
     #share-menu-button {
