--- a/functions/test-db/json2/scvo/templates/search.hbs
+++ b/functions/test-db/json2/scvo/templates/search.hbs
@@ -10,7 +10,7 @@
                         <div class="mdc-form-field">
                             <div class="mdc-checkbox">
                                 <input type="checkbox" name="type" id="type-scvo-cms-post" value="scvo-cms-post" class="mdc-checkbox__native-control"
-                                    {{#if (contains params.query.type "scvo-cms-post")}}checked{{/if}}>
+                                {{#if (contains params.query.type "scvo-cms-post")}}checked{{/if}}>
                                 <div class="mdc-checkbox__background">
                                     <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
                                         <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -25,7 +25,7 @@
                         <div class="mdc-form-field">
                             <div class="mdc-checkbox">
                                 <input type="checkbox" name="type" id="type-scvo-document-evidence" value="scvo-document-evidence" class="mdc-checkbox__native-control"
-                                    {{#if (contains params.query.type "scvo-document-evidence")}}checked{{/if}}>
+                                {{#if (contains params.query.type "scvo-document-evidence")}}checked{{/if}}>
                                 <div class="mdc-checkbox__background">
                                     <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
                                         <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -36,26 +36,11 @@
                             <label for="type-scvo-document-evidence">
                                 Evidence Library documents
                             </label>
-                            <div class="mdc-form-field">
-                                <div class="mdc-checkbox">
-                                    <input type="checkbox" name="type" id="type-scvo-cms-page" value="scvo-cms-page" class="mdc-checkbox__native-control"
-                                        {{#if (contains params.query.type "scvo-cms-page")}}checked{{/if}}>
-                                    <div class="mdc-checkbox__background">
-                                        <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
-                                            <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
-                                        </svg>
-                                        <div class="mdc-checkbox__mixedmark"></div>
-                                    </div>
-                                </div>
-                                <label for="type-scvo-cms-page">
-                                    Pages
-                                </label>
-                            </div>
                         </div>
                         <div class="mdc-form-field">
                             <div class="mdc-checkbox">
                                 <input type="checkbox" name="type" id="type-scvo-member" value="scvo-member" class="mdc-checkbox__native-control"
-                                    {{#if (contains params.query.type "scvo-member")}}checked{{/if}}>
+                                {{#if (contains params.query.type "scvo-member")}}checked{{/if}}>
                                 <div class="mdc-checkbox__background">
                                     <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
                                         <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -64,13 +49,43 @@
                                 </div>
                             </div>
                             <label for="type-scvo-member">
-                                SCVO member organisations
+                                Member organisations
+                            </label>
+                        </div>
+                        <div class="mdc-form-field">
+                            <div class="mdc-checkbox">
+                                <input type="checkbox" name="type" id="type-scvo-cms-page" value="scvo-cms-page" class="mdc-checkbox__native-control"
+                                {{#if (contains params.query.type "scvo-cms-page")}}checked{{/if}}>
+                                <div class="mdc-checkbox__background">
+                                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                                        <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
+                                    </svg>
+                                    <div class="mdc-checkbox__mixedmark"></div>
+                                </div>
+                            </div>
+                            <label for="type-scvo-cms-page">
+                                Pages
+                            </label>
+                        </div>
+                        <div class="mdc-form-field">
+                            <div class="mdc-checkbox">
+                                <input type="checkbox" name="type" id="type-scvo-staff" value="scvo-staff" class="mdc-checkbox__native-control"
+                                {{#if (contains params.query.type "scvo-staff")}}checked{{/if}}>
+                                <div class="mdc-checkbox__background">
+                                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                                        <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
+                                    </svg>
+                                    <div class="mdc-checkbox__mixedmark"></div>
+                                </div>
+                            </div>
+                            <label for="type-scvo-staff">
+                                Staff
                             </label>
                         </div>
                         <div class="mdc-form-field">
                             <div class="mdc-checkbox">
                                 <input type="checkbox" name="type" id="type-scvo-event" value="scvo-event" class="mdc-checkbox__native-control"
-                                    {{#if (contains params.query.type "scvo-event")}}checked{{/if}}>
+                                {{#if (contains params.query.type "scvo-event")}}checked{{/if}}>
                                 <div class="mdc-checkbox__background">
                                     <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
                                         <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -86,7 +101,7 @@
                         <div class="mdc-form-field">
                             <div class="mdc-checkbox">
                                 <input type="checkbox" name="type" id="type-scvo-grant-charter" value="scvo-grant-charter" class="mdc-checkbox__native-control"
-                                    {{#if (contains params.query.type "scvo-grant-charter")}}checked{{/if}}>
+                                {{#if (contains params.query.type "scvo-grant-charter")}}checked{{/if}}>
                                 <div class="mdc-checkbox__background">
                                     <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
                                         <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -101,7 +116,7 @@
                         <div class="mdc-form-field">
                             <div class="mdc-checkbox">
                                 <input type="checkbox" name="type" id="type-digital-charter-signatory" value="digital-charter-signatory" class="mdc-checkbox__native-control"
-                                    {{#if (contains params.query.type "digital-charter-signatory")}}checked{{/if}}>
+                                {{#if (contains params.query.type "digital-charter-signatory")}}checked{{/if}}>
                                 <div class="mdc-checkbox__background">
                                     <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
                                         <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -117,7 +132,7 @@
                         <div class="mdc-form-field">
                             <div class="mdc-checkbox">
                                 <input type="checkbox" name="type" id="type-funding-scotland-fund" value="funding-scotland-fund" class="mdc-checkbox__native-control"
-                                    {{#if (contains params.query.type "funding-scotland-fund")}}checked{{/if}}>
+                                {{#if (contains params.query.type "funding-scotland-fund")}}checked{{/if}}>
                                 <div class="mdc-checkbox__background">
                                     <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
                                         <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -133,7 +148,7 @@
                         <div class="mdc-form-field">
                             <div class="mdc-checkbox">
                                 <input type="checkbox" name="type" id="type-goodhq-organisation" value="goodhq-organisation" class="mdc-checkbox__native-control"
-                                    {{#if (contains params.query.type "goodhq-organisation")}}checked{{/if}}>
+                                {{#if (contains params.query.type "goodhq-organisation")}}checked{{/if}}>
                                 <div class="mdc-checkbox__background">
                                     <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
                                         <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -149,7 +164,7 @@
                         <div class="mdc-form-field">
                             <div class="mdc-checkbox">
                                 <input type="checkbox" name="type" id="type-goodmoves-legacy" value="goodmoves-legacy" class="mdc-checkbox__native-control"
-                                    {{#if (contains params.query.type "goodmoves-legacy")}}checked{{/if}}>
+                                {{#if (contains params.query.type "goodmoves-legacy")}}checked{{/if}}>
                                 <div class="mdc-checkbox__background">
                                     <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
                                         <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -165,7 +180,7 @@
                         <div class="mdc-form-field">
                             <div class="mdc-checkbox">
                                 <input type="checkbox" name="type" id="type-tfn-blog-post" value="tfn-blog-post" class="mdc-checkbox__native-control"
-                                    {{#if (contains params.query.type "tfn-blog-post")}}checked{{/if}}>
+                                {{#if (contains params.query.type "tfn-blog-post")}}checked{{/if}}>
                                 <div class="mdc-checkbox__background">
                                     <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
                                         <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -180,7 +195,7 @@
                         <div class="mdc-form-field">
                             <div class="mdc-checkbox">
                                 <input type="checkbox" name="type" id="type-tfn-event" value="tfn-event" class="mdc-checkbox__native-control"
-                                    {{#if (contains params.query.type "tfn-event")}}checked{{/if}}>
+                                {{#if (contains params.query.type "tfn-event")}}checked{{/if}}>
                                 <div class="mdc-checkbox__background">
                                     <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
                                         <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -195,7 +210,7 @@
                         <div class="mdc-form-field">
                             <div class="mdc-checkbox">
                                 <input type="checkbox" name="type" id="type-tfn-feature" value="tfn-feature" class="mdc-checkbox__native-control"
-                                    {{#if (contains params.query.type "tfn-feature")}}checked{{/if}}>
+                                {{#if (contains params.query.type "tfn-feature")}}checked{{/if}}>
                                 <div class="mdc-checkbox__background">
                                     <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
                                         <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -210,7 +225,7 @@
                         <div class="mdc-form-field">
                             <div class="mdc-checkbox">
                                 <input type="checkbox" name="type" id="type-tfn-list" value="tfn-list" class="mdc-checkbox__native-control"
-                                    {{#if (contains params.query.type "tfn-list")}}checked{{/if}}>
+                                {{#if (contains params.query.type "tfn-list")}}checked{{/if}}>
                                 <div class="mdc-checkbox__background">
                                     <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
                                         <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -225,7 +240,7 @@
                         <div class="mdc-form-field">
                             <div class="mdc-checkbox">
                                 <input type="checkbox" name="type" id="type-tfn-news-post" value="tfn-news-post" class="mdc-checkbox__native-control"
-                                    {{#if (contains params.query.type "tfn-news-post")}}checked{{/if}}>
+                                {{#if (contains params.query.type "tfn-news-post")}}checked{{/if}}>
                                 <div class="mdc-checkbox__background">
                                     <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
                                         <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -240,7 +255,7 @@
                         <div class="mdc-form-field">
                             <div class="mdc-checkbox">
                                 <input type="checkbox" name="type" id="type-tfn-poll" value="tfn-poll" class="mdc-checkbox__native-control"
-                                    {{#if (contains params.query.type "tfn-poll")}}checked{{/if}}>
+                                {{#if (contains params.query.type "tfn-poll")}}checked{{/if}}>
                                 <div class="mdc-checkbox__background">
                                     <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
                                         <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -256,16 +271,16 @@
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content">
                     {{#each primaryResponse.hits.hits}}
-                        {{#if _source.rendered.scvo_search_result}}
-                                {{#ifAll (contains _source.rendered.scvo_search_result "%highlights%") (contains _source.rendered.scvo_search_result "%/highlights%") highlight.text_bag}}
-                                    
-                                    {{{regexReplace _source.rendered.scvo_search_result "(%highlights%)(.|[\r\n])*?(%/highlights%)" "img" (removeEntities (concat "<p class=\"results-highlights\">..." (join highlight.text_bag " ... ... ") " ...</p>"))}}}
-                                {{else}}
-                                    {{{regexReplace _source.rendered.scvo_search_result "(%/?highlights%)" "igm" ""}}}
-                                {{/ifAll}}
-                        {{else}}
-                            [ Error - search result template missing - Document Type: {{_type}} ]
-                        {{/if}}
+                    {{#if _source.rendered.scvo_search_result}}
+                    {{#ifAll (contains _source.rendered.scvo_search_result "%highlights%") (contains _source.rendered.scvo_search_result "%/highlights%") highlight.text_bag}}
+
+                    {{{regexReplace _source.rendered.scvo_search_result "(%highlights%)(.|[\r\n])*?(%/highlights%)" "img" (removeEntities (concat "<p class=\"results-highlights\">..." (join highlight.text_bag " ... ... ") " ...</p>"))}}}
+                    {{else}}
+                    {{{regexReplace _source.rendered.scvo_search_result "(%/?highlights%)" "igm" ""}}}
+                    {{/ifAll}}
+                    {{else}}
+                    [ Error - search result template missing - Document Type: {{_type}} ]
+                    {{/if}}
                     {{/each}}
                 </div>
             </div>
