--- a/functions/test-db/json2/scvo/templates/staff-search.hbs
+++ b/functions/test-db/json2/scvo/templates/staff-search.hbs
@@ -52,7 +52,7 @@
                     <div class="v-margin">
                         <h2>{{key}}</h2>
                         {{#each staff.hits.hits}}
-                        {{{_source.rendered.list}}}
+                        {{{_source.rendered.scvo_list}}}
                         {{/each}}
                     </div>
                     {{/each}}
