--- a/functions/test-db/json2/scvo/templates/evidence-library-document-search.hbs
+++ b/functions/test-db/json2/scvo/templates/evidence-library-document-search.hbs
@@ -17,6 +17,7 @@
         </div>
     </div>
     <div class="container-fluid">
+        {{#> handle_404}}
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
             <li><a href="/policy-research">Policy &amp; research</a></li>
@@ -42,5 +43,6 @@
                 </div>
             </div>
         </div>
+        {{/handle_404}}
     </div>
 </div>
