--- a/functions/test-db/json2/scvo/templates/member.hbs
+++ b/functions/test-db/json2/scvo/templates/member.hbs
@@ -21,6 +21,7 @@
         </div>
     </div>
     <div class="container-fluid">
+        {{#> handle_404}}
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
             <li><a href="/about">About SCVO</a></li>
@@ -47,5 +48,6 @@
                 </div>
             </div>
         </div>
+        {{/handle_404}}
     </div>
 </div>
