--- a/functions/test-db/json2/scvo/templates/page-digital.hbs
+++ b/functions/test-db/json2/scvo/templates/page-digital.hbs
@@ -17,6 +17,7 @@
         </div>
     </div>
     <div class="container-fluid heading">
+        {{#> handle_404}}
         {{> breadcrumbs}}
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
@@ -253,5 +254,6 @@
                 </div>
             </div>
         </div>
+        {{/handle_404}}
     </div>
 </div>
