--- a/functions/test-db/json2/scvo/templates/page-landing.hbs
+++ b/functions/test-db/json2/scvo/templates/page-landing.hbs
@@ -21,6 +21,7 @@
         </div>
     </div>
     <div class="container-fluid">
+        {{#> handle_404}}
         {{> breadcrumbs}}
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
@@ -45,6 +46,7 @@
                 {{/compare}}
             </div>
         </div>
+        {{/handle_404}}
     </div>
 </div>
 
