--- a/functions/test-db/json2/scvo/templates/page-setting-up.hbs
+++ b/functions/test-db/json2/scvo/templates/page-setting-up.hbs
@@ -21,6 +21,7 @@
         </div>
     </div>
     <div class="container-fluid">
+        {{#> handle_404}}
         {{> breadcrumbs}}
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
@@ -34,6 +35,7 @@
                 </div>
             </div>
         </div>
+        {{/handle_404}}
     </div>
     <div class="footer-image faqs">
         <div class="container-fluid">
