--- a/functions/test-db/json2/scvo/templates/post-author.hbs
+++ b/functions/test-db/json2/scvo/templates/post-author.hbs
@@ -17,6 +17,7 @@
         </div>
     </div>
     <div class="container-fluid">
+        {{#> handle_404}}
         {{> breadcrumbs_posts}}
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
@@ -39,5 +40,6 @@
                 </div>
             </div>
         </div>
+        {{/handle_404}}
     </div>
 </div>
