--- a/functions/test-db/json2/scvo/templates/trustee.hbs
+++ b/functions/test-db/json2/scvo/templates/trustee.hbs
@@ -17,6 +17,7 @@
         </div>
     </div>
     <div class="container-fluid">
+        {{#> handle_404}}
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
             <li><a href="/projects-campaigns">Projects &amp; campaigns</a></li>
@@ -36,5 +37,6 @@
                 </div>
             </div>
         </div>
+        {{/handle_404}}
     </div>
 </div>
