--- a/functions/test-db/json2/scvo/templates/grant-charter.hbs
+++ b/functions/test-db/json2/scvo/templates/grant-charter.hbs
@@ -17,6 +17,7 @@
         </div>
     </div>
     <div class="container-fluid">
+        {{#> handle_404}}
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
             <li><a href="/digital">Digital</a></li>
@@ -34,5 +35,6 @@
                 </div>
             </div>
         </div>
+        {{/handle_404}}
     </div>
 </div>
