--- a/functions/test-db/json2/scvo/templates/page-credit-union-loan-calculator.hbs
+++ b/functions/test-db/json2/scvo/templates/page-credit-union-loan-calculator.hbs
@@ -24,6 +24,7 @@
         </div>
     </div>
     <div class="container-fluid">
+        {{#> handle_404}}
         {{> breadcrumbs}}
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
@@ -89,5 +90,6 @@
                 </div>
             </div>
         </div>
+        {{/handle_404}}
     </div>
 </div>
