--- a/functions/test-db/json2/scvo/templates/page-running-funding-guide.hbs
+++ b/functions/test-db/json2/scvo/templates/page-running-funding-guide.hbs
@@ -21,6 +21,7 @@
         </div>
     </div>
     <div class="container-fluid">
+        {{#> handle_404}}
         {{> breadcrumbs}}
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
@@ -48,6 +49,7 @@
                 {{/compare}}
             </div>
         </div>
+        {{/handle_404}}
     </div>
     {{> footer_join_our_hub}}
 </div>
