--- a/functions/test-db/json2/scvo/templates/home.hbs
+++ b/functions/test-db/json2/scvo/templates/home.hbs
@@ -20,24 +20,50 @@
     </div>
 </div>
 
-<section class="featured-content">
+<section class="search">
     <div class="container-fluid">
-        <form [searchroute]="'main_search'" class="search_form">
+        <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-11-desktop mdc-layout-grid__cell--span-10-tablet mdc-layout-grid__cell--span-9-phone">
-                    <div class="mdc-textfield">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-12-tablet mdc-layout-grid__cell--span-12-phone">
+                    <h3>What can we help you with?</h3>
+                    <form [searchroute]="'main_search'" class="home_search_form">
                         <input type="text" class="mdc-textfield__input white-text mdc-text-field searchRoute" placeholder="Search SCVO, Goodmoves, TFN, and more" id="q" name="q">
+                        <button type="submit" class="mdc-toolbar__icon mdc-toolbar__search search-button-large" aria-label="Search" alt="Search">
+                            <span class="far fa-2x fa-search" aria-hidden="true"></span>
+                        </button>
+                    </form>
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-12-tablet mdc-layout-grid__cell--span-12-phone">
+                    <h3>Trending topics</h3>
+                    <div class="mdc-layout-grid">
+                        <div class="mdc-layout-grid__inner">
+                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-12-phone">
+                                <a href="https://thegathering.scot/">The Gathering</a>
+                            </div>
+                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-12-phone">
+                                <a href="/jobs/community-jobs-scotland/information-for-employers/become-an-employer">Become a CJS employer</a>
+                            </div>
+                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-12-phone">
+                                <a href="/running-your-organisation/business-planning/writing-business-plan">Writing a business plan</a>
+                            </div>
+                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-12-phone">
+                                <a href="/running-your-organisation/governance/roles-responsibilities">Governance roles & responsibilites</a>
+                            </div>
+                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-12-phone">
+                                <a href="/setting-up-a-charity/write-your-constitution">Write your constitution</a>
+                            </div>
+                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-12-phone">
+                                <a href="/setting-up-a-charity/frequently-asked-questions">Setting up a charity FAQs</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-phone">
-                    <button type="submit" class="mdc-toolbar__icon mdc-toolbar__search search-button-large" aria-label="Search" alt="Search">
-                        <span class="far fa-3x fa-search" aria-hidden="true"></span>
-                    </button>
-                </div>
             </div>
-        </form>
+        </div>
     </div>
+</section>
 
+<section class="featured-content">
     <div class="featured-background-image" style="padding: 1rem 0; background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/scvo-hp-g2018-banner-gb-1400x400.jpg');">
         <div class="container-fluid">
             <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
